--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -163,7 +163,7 @@
     left: 0;
     height: var(--ak-header-height);
     width: 100%;
-    z-index: 100;
+    z-index: 9999;
 
     display: flex;
     align-items: center;
@@ -932,6 +932,8 @@
         top: var(--ak-header-height);
         left: 0;
 
+        z-index: 99999999;
+
         background-color: #ffffff;
         width: 100%;
         height: auto;
@@ -1406,6 +1408,9 @@
         height: 353px;
     }
 
+    .footer-newsletter{
+        display: none;
+    }
     .btn-close {
         background-size: 31px 31px;
         background-image: url('/wp-content/themes/anomeo/assets/img/Close_Pop_up-08.svg');
@@ -1425,25 +1430,24 @@
     }
 
     .button {
-        color: #000000;
-        background-color: transparent;
+        color: #fff;
+        background-color: #F89D3F;
         border: 0;
-        padding: 0;
-        margin: 0;
+        width: 100%!important;
+        margin-top: 29px;
+        margin-bottom: 22px;
         outline: 0;
         cursor: pointer;
-
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 300;
-        text-decoration: underline;
+        text-decoration: none;
+        font-family: 'Din Pro Bold';
+        text-transform: uppercase;
 
-        @include media-breakpoint-up(sm) {
-            font-size: 16px;
-        }
+    }
 
-        @include media-breakpoint-up(xl) {
-            font-size: 25px;
-        }
+    input{
+        width: 100%!important;
     }
 
     &__text-wrap {
@@ -1453,6 +1457,8 @@
         color: #128796;
 
         transition: all 450ms;
+
+        margin-bottom: 25px;
 
         @include media-breakpoint-down(sm) {
             font-size: 24px;
@@ -2240,6 +2246,7 @@
         .sort-col {
             display: flex;
             flex-direction: row;
+           
 
             .filters-toggle-btn {
                 background-color: #FDA757;
@@ -2280,11 +2287,11 @@
         }
 
         .filter-row-popup {
-            position: absolute;
-            top: calc(100% + 1px);
+            position: fixed;
             left: 0;
             width: 100%;
-            padding: 20px var(--ak-main-spacing);
+            padding: 330px var(--ak-main-spacing) 20px;
+            border-right: 1px solid #EAEAEA;
 
             background-color: #fff;
             text-transform: uppercase;
@@ -2296,21 +2303,21 @@
             transform: translateY(-10%);
             transform: translateX(-100%);
 
+            width: 30%;
+            height: 100%;
+            z-index: 99;
+            top: 0px;
+
             transition: all 350ms ease;
-
-            @include media-breakpoint-up(sm) {
-                padding: 40px var(--ak-main-spacing);
-            }
-
-            @include media-breakpoint-up(xl) {
-                padding: 60px var(--ak-main-spacing);
-            }
 
             &.open {
                 visibility: visible;
                 opacity: 1;
                 transform: translateY(0);
                 transform: translateX(0);
+
+                
+                
             }
         }
 
@@ -6118,6 +6125,10 @@
         padding-top: 50px;
     }
 
+    .newsletter-popup{
+        display: none;
+    }
+
     .footer-title {
         font-size: 14px;
         font-family: "Din Pro Bold";
@@ -7838,10 +7849,10 @@
         left: 0;
         background: #F2F8F9;
         z-index: 99999;
-        opacity: 0;
+        transform: translateX(100%);
         -webkit-transition: opacity 400ms ease-in;
         -moz-transition: opacity 400ms ease-in;
-        transition: opacity 400ms ease-in;
+        transition: transform 400ms ease-in;
         pointer-events: none;
 
         padding-top: 142px;
@@ -7851,7 +7862,7 @@
         }
 
         &._active {
-            opacity: 1;
+            transform: translateX(0);
             pointer-events: auto;
         }
     }
@@ -8008,6 +8019,12 @@
 
                     cursor: default;
 
+                    transform: translateX(0);
+
+                    &:hover{
+                        transform: translateX(0);
+                    }
+
                     @include media-breakpoint-down(sm) {
                         font-size: 28px;
                         width: 100%;
@@ -8019,16 +8036,18 @@
 
                 .answer {
                     // display: block;
-                    transition: all .5s ease-in-out;
+                    // transition: all .5s ease-in-out;
                     opacity: 1;
                     visibility: visible;
-                    height: 100%;
+                    // height: 100%;
                     padding: 70px;
                     padding-bottom: 115px;
 
                     font-size: 36px;
                     color: #138997;
                     width: 85%;
+
+                    // transform: translateY(0)!important;
 
                     @include media-breakpoint-down(sm) {
                        padding: 25px 78px 30px 35px;
@@ -8051,8 +8070,14 @@
                 margin-bottom: 0;
                 padding: 20px 200px 20px 70px;
                 text-transform: none;
+                transform: translateX(0);
+                transition: all 0.5s;
 
                 cursor: pointer;
+
+                &:hover{
+                    transform: translateX(30px);
+                }
 
                 @include media-breakpoint-down(sm) {
                    padding: 25px 60px 25px 35px;
@@ -8064,13 +8089,15 @@
                 // display: none;
                 opacity: 0;
                 visibility: hidden;
-                height: 0;
+                // height: 0;
+                // transform: translateY(-100%);
 
-                &.show{
-                    opacity: 1;
-                    visibility: visible;
-                    height: 100%;
-                }
+                // &.show{
+                //     opacity: 1;
+                //     visibility: visible;
+                //     height: 100%;
+                    
+                // }
             }
 
             &:after {
@@ -8660,13 +8687,435 @@
     }
 }
 
-.mc4wp-form-success{
-    .mc4wp-success{
+.newsletter-thank {
+    display: none;
+}
+
+.mc4wp-form-success {
+    .mc4wp-success {
         display: none;
     }
 
-    .icon-open{
-        background-image: url(../img/Newsletter_final_desktop-14.svg)!important;
+    .newsletter.subscribe {
+        display: none;
+    }
+
+    .newsletter-thank {
+        display: block;
+
+        .icon-thank {
+            background-image: url(../img/Newsletter_final_desktop-14.svg) !important;
+        }
+    }
+
+
+}
+
+.index{
+    z-index: 999;
+}
+
+.ml-450{
+    margin-left: 30%;
+    .ak-product-item{
+        width: 50%;
     }
 }
+
+
+//////////////////////////////////////
+// label.nav-toggle{
+//     display: block;
+// }
+
+
+
+// .nav {
+//     /*  ширна произвольная, не стесняйтесь экспериментировать */
+//     width: 320px;
+//     min-width: 320px;
+//     /* фиксируем и выставляем высоту панели на максимум */
+//     height: 100%;
+//     position: fixed;
+//     top: 0;
+//     bottom: 0;
+//     margin: 0;
+//     /* сдвигаем (прячем) панель относительно левого края страницы */
+//     left: -320px;
+//     /* внутренние отступы */
+//     padding: 15px 20px;
+//     /* плавный переход смещения панели */
+//     -webkit-transition: left 0.3s;
+//     -moz-transition: left 0.3s;
+//     transition: left 0.3s;
+//     /* определяем цвет фона панели */
+//     background: #16a085;
+//     /* поверх других элементов */
+//     z-index: 2000;
+// }
+
+
+/**
+ * Кнопка переключения панели
+ * тег <label>
+ */
+
+// .nav-toggle {
+//     /* абсолютно позиционируем */
+//     position: absolute;
+//     /* относительно левого края панели */
+//     left: 320px;
+//     /* отступ от верхнего края панели */
+//     top: 1em;
+//     /* внутренние отступы */
+//     padding: 0.5em;
+//     /* определяем цвет фона переключателя
+//      * чаще вчего в соответствии с цветом фона панели
+//     */
+//     background: inherit;
+//     /* цвет текста */
+//     color: #dadada;
+//     /* вид курсора */
+//     cursor: pointer;
+//     /* размер шрифта */
+//     font-size: 1.2em;
+//     line-height: 1;
+//     /* всегда поверх других элементов страницы */
+//     z-index: 2001;
+//     /* анимируем цвет текста при наведении */
+//     -webkit-transition: color .25s ease-in-out;
+//     -moz-transition: color .25s ease-in-out;
+//     transition: color .25s ease-in-out;
+// }
+
+
+/**
+ * Скрытый чекбокс (флажок)
+ * невидим и недоступен :)
+ * имя селектора атрибут флажка
+ */
+
+// [id='nav-toggle'] {
+//     position: absolute;
+//     display: none;
+// }
+
+
+/**
+ * изменение положения переключателя 
+ * при просмотре на мобильных устройствах
+ * когда навигация раскрыта, распологаем внутри панели
+*/
+
+// [id='nav-toggle']:checked ~ .nav > .nav-toggle {
+//     left: auto;
+//     right: 2px;
+//     top: 1em;
+// }
+
+
+/**
+ * Когда флажок установлен, открывается панель
+ * используем псевдокласс:checked
+ */
+
+// [id='nav-toggle']:checked ~ .nav {
+//     left: 0;
+//     box-shadow:4px 0px 20px 0px rgba(0,0,0, 0.5);
+//     -moz-box-shadow:4px 0px 20px 0px rgba(0,0,0, 0.5);
+//     -webkit-box-shadow:4px 0px 20px 0px rgba(0,0,0, 0.5);
+//     overflow-y: auto;
+// }
+
+
+/* 
+ * смещение контента страницы
+ * на размер ширины панели,
+ * фишка необязательная, на любителя
+*/
+
+// [id='nav-toggle']:checked ~ main > article {
+//     -webkit-transform: translateX(320px);
+//     -moz-transform: translateX(320px);
+//     transform: translateX(320px);
+// }
+
+
+/*
+ * изменение символа переключателя,
+ * привычный крестик (MULTIPLICATION X), 
+ * вы можете испльзовать любой другой значок
+*/
+
+// [id='nav-toggle']:checked ~ .nav > .nav-toggle:after {
+//     content: '\2715';
+// }
+
+
+/**
+ * профиксим баг в Android <= 4.1.2
+ * см: http://timpietrusky.com/advanced-checkbox-hack
+ */
+
+// body {
+//     -webkit-animation: bugfix infinite 1s;
+// }
+
+// @-webkit-keyframes bugfix {
+//     to {
+//       padding: 0;
+//     }
+// }
+
+
+/**
+ * позаботьтимся о средних и маленьких экранах
+ * мобильных устройств
+ */
+
+// @media screen and (min-width: 320px) {
+//     html,
+//     body {
+//       margin: 0;
+//       overflow-x: hidden;
+//     }
+// }
+
+// @media screen and (max-width: 320px) {
+//     html,
+//     body {
+//       margin: 0;
+//       overflow-x: hidden;
+//     }
+//     .nav {
+//       width: 100%;
+//       box-shadow: none
+//     }
+// }
+
+
+/**
+ * Формируем стиль заголовка (логотип) панели 
+*/
+
+// .nav h2 {
+//     width: 90%;
+//     padding: 0;
+//     margin: 10px 0;
+//     text-align: center;
+//     text-shadow: rgba(255, 255, 255, .1) -1px -1px 1px, rgba(0, 0, 0, .5) 1px 1px 1px;
+//     font-size: 1.3em;
+//     line-height: 1.3em;
+//     opacity: 0;
+//     transform: scale(0.1, 0.1);
+//     -ms-transform: scale(0.1, 0.1);
+//     -moz-transform: scale(0.1, 0.1);
+//     -webkit-transform: scale(0.1, 0.1);
+//     transform-origin: 0% 0%;
+//     -ms-transform-origin: 0% 0%;
+//     -moz-transform-origin: 0% 0%;
+//     -webkit-transform-origin: 0% 0%;
+//     transition: opacity 0.8s, transform 0.8s;
+//     -ms-transition: opacity 0.8s, -ms-transform 0.8s;
+//     -moz-transition: opacity 0.8s, -moz-transform 0.8s;
+//     -webkit-transition: opacity 0.8s, -webkit-transform 0.8s;
+// }
+
+// .nav h2 a {
+//     color: #dadada;
+//     text-decoration: none;
+//     text-transform: uppercase;
+// }
+
+
+/*плавное появление заголовка (логотипа) при раскрытии панели */
+
+// [id='nav-toggle']:checked ~ .nav h2 {
+//     opacity: 1;
+//     transform: scale(1, 1);
+//     -ms-transform: scale(1, 1);
+//     -moz-transform: scale(1, 1);
+//     -webkit-transform: scale(1, 1);
+// }
+
+
+/**
+ * формируем непосредственно само меню
+ * используем неупорядоченный список для пунктов меню
+ * прикрутим трансфомации и плавные переходы
+ */
+
+// .nav > ul {
+//     display: block;
+//     margin: 0;
+//     padding: 0;
+//     list-style: none;
+// }
+
+// .nav > ul > li {
+//     line-height: 2.5;
+//     opacity: 0;
+//     -webkit-transform: translateX(-50%);
+//     -moz-transform: translateX(-50%);
+//     -ms-transform: translateX(-50%);
+//     transform: translateX(-50%);
+//     -webkit-transition: opacity .5s .1s, -webkit-transform .5s .1s;
+//     -moz-transition: opacity .5s .1s, -moz-transform .5s .1s;
+//     -ms-transition: opacity .5s .1s, -ms-transform .5s .1s;
+//     transition: opacity .5s .1s, transform .5s .1s;
+// }
+
+// [id='nav-toggle']:checked ~ .nav > ul > li {
+//     opacity: 1;
+//     -webkit-transform: translateX(0);
+//     -moz-transform: translateX(0);
+//     -ms-transform: translateX(0);
+//     transform: translateX(0);
+// }
+
+
+/* определяем интервалы появления пунктов меню */
+
+// .nav > ul > li:nth-child(2) {
+//     -webkit-transition: opacity .5s .2s, -webkit-transform .5s .2s;
+//     transition: opacity .5s .2s, transform .5s .2s;
+// }
+
+// .nav > ul > li:nth-child(3) {
+//     -webkit-transition: opacity .5s .3s, -webkit-transform .5s .3s;
+//     transition: opacity .5s .3s, transform .5s .3s;
+// }
+
+// .nav > ul > li:nth-child(4) {
+//     -webkit-transition: opacity .5s .4s, -webkit-transform .5s .4s;
+//     transition: opacity .5s .4s, transform .5s .4s;
+// }
+
+// .nav > ul > li:nth-child(5) {
+//     -webkit-transition: opacity .5s .5s, -webkit-transform .5s .5s;
+//     transition: opacity .5s .5s, transform .5s .5s;
+// }
+
+// .nav > ul > li:nth-child(6) {
+//     -webkit-transition: opacity .5s .6s, -webkit-transform .5s .6s;
+//     transition: opacity .5s .6s, transform .5s .6s;
+// }
+
+// .nav > ul > li:nth-child(7) {
+//     -webkit-transition: opacity .5s .7s, -webkit-transform .5s .7s;
+//     transition: opacity .5s .7s, transform .5s .7s;
+// }
+
+
+/**
+ * оформление ссылок пунктов меню
+ */
+
+// .nav > ul > li > a {
+//     display: inline-block;
+//     position: relative;
+//     padding: 0;
+//     font-family: 'Open Sans', sans-serif;
+//     font-weight: 300;
+//     font-size: 1.2em;
+//     color: #dadada;
+//     width: 100%;
+//     text-decoration: none;
+//     /* плавный переход */
+//     -webkit-transition: color .5s ease, padding .5s ease;
+//     -moz-transition: color .5s ease, padding .5s ease;
+//     transition: color .5s ease, padding .5s ease;
+// }
+
+
+/**
+ * состояние ссылок меню при наведении
+ */
+
+// .nav > ul > li > a:hover,
+// .nav > ul > li > a:focus {
+//     color: white;
+//     padding-left: 15px;
+// }
+
+
+/**
+ * линия подчеркивания ссылок меню
+ */
+
+// .nav > ul > li > a:before {
+//     content: '';
+//     display: block;
+//     position: absolute;
+//     right: 0;
+//     bottom: 0;
+//     height: 1px;
+//     width: 100%;
+//     -webkit-transition: width 0s ease;
+//     transition: width 0s ease;
+// }
+
+// .nav > ul > li > a:after {
+//     content: '';
+//     display: block;
+//     position: absolute;
+//     left: 0;
+//     bottom: 0;
+//     height: 1px;
+//     width: 100%;
+//     background: #3bc1a0;
+//     -webkit-transition: width .5s ease;
+//     transition: width .5s ease;
+// }
+
+
+/**
+ * анимируем линию подчеркивания 
+ * ссылок при наведении
+ */
+
+// .nav > ul > li > a:hover:before {
+//     width: 0%;
+//     background: #3bc1a0;
+//     -webkit-transition: width .5s ease;
+//     transition: width .5s ease;
+// }
+
+// .nav > ul > li > a:hover:after {
+//     width: 0%;
+//     background: transparent;
+//     -webkit-transition: width 0s ease;
+//     transition: width 0s ease;
+// }
+
+
+/* фон затемнения на основной контент 
+ * при этом элементы блокируютя
+ * спорная такая фича, если оно вам надо
+ * просто раскомментируйте
+*/
+
+/*
+.mask-content {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    visibility: hidden;
+    opacity: 0;
+}
+
+[id='nav-toggle']:checked ~ .mask-content {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition: opacity .5s, visibility .5s;
+    transition: opacity .5s, visibility .5s;
+}
+*/
+
+
 
