--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -1708,9 +1708,8 @@
             max-width: 85%;
         }
 
-
         p {
-            margin-bottom: 60px;
+            margin-bottom: 0px;
             color: #fff;
 
             @include media-breakpoint-down(sm) {
@@ -8069,7 +8068,7 @@
                     // transition: all .5s ease-in-out;
                     opacity: 1;
                     visibility: visible;
-                    // height: 100%;
+                    height: 100%;
                     padding: 70px;
                     padding-bottom: 115px;
 
@@ -8119,7 +8118,7 @@
                 // display: none;
                 opacity: 0;
                 visibility: hidden;
-                // height: 0;
+                height: 0;
                 // transform: translateY(-100%);
 
                 // &.show{
