register script, address wip

--- a/wp-content/themes/anomeo/assets/scss/_base.scss
+++ b/wp-content/themes/anomeo/assets/scss/_base.scss
@@ -513,6 +513,10 @@ input{
             height: 500px;
             
         }
+        @include media-breakpoint-up(xl) {
+            height: 650px;
+            
+        }
 
         img {
             position: inherit;
